Preserve order when message has multiple JWTs.